--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,5 @@
     "express": "^4.21.2",
     "mongoose": "^7.4.2"
   },
-  "devDependencies": {},
   "description": ""
 }
